-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
13d5630ee (dev), 4476a91ab (dev), 065218648 (6.9), 9d681235d (6.8)
The warning in the prefixed import type category has no location, and is followed by multiple warnings that all complain about the same thing (accessing an attached property of a valuetype in this case):
Warning: /Users/sami/tmp/untitled66/Main.qml: Cannot use a non-QObject type QRectF to access prefixed import [prefixed-import-type]
Warning: /Users/sami/tmp/untitled66/Main.qml:6:28: Type not found in namespace [unresolved-type]
property int foo: rr.T.MyClass.i
^^^^^^^
Warning: /Users/sami/tmp/untitled66/Main.qml:6:28: Member "MyClass" not found on type "QRectF" [missing-property]
property int foo: rr.T.MyClass.i
There is only the filename, but no line and column numbers for the [prefixed-import-type] warning. In qmlls, this warning is printed for the first line of the file because it has no line nor column number, see screenshot:
Run qmllint on the attached project Archive.zip. The line and column should be 6:32 (at the rr keyword).
These warnings should be cleaned up: we should only emit one warning instead of 3, and have proper locations on them.
- relates to
-
QTBUG-119890 qmllint warnings: reach feature parity with QtCreator
-
- In Progress
-
-
QTBUG-118112 Create doc pages that explain how to fix qmllint/qmlsc warnings (take 2)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-127294 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 577080,2 | doc: exclude prefixed-import-type category | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 617582,1 | QmlCompiler: Use current compile pass as source location provider | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 617588,2 | qmllint: Warn about invalid prefixed import access earlier | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 618119,2 | qmllint: Warn about invalid prefixed import access earlier | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 618126,3 | qmllint: Warn about invalid prefixed import access earlier | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |