qmllint: Warn about invalid prefixed import access earlier

We can detect that this doesn't work already when we establish that the
lookup references an import namespace. Then we don't create so many
follow-up warnings.

Pick-to: 6.9 6.8
Fixes: QTBUG-127294
Change-Id: I16af7d905255af7a775af32d2a6ae5bfa6171b61
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>