src/qmlcompiler/qqmljstyperesolver.cpp
@@ -1611,15 +1611,7 @@ QQmlJSRegisterContent QQmlJSTypeResolver::memberType(
                 QQmlJSRegisterContent::Property, type);
     }
     if (type.isImportNamespace()) {
-        if (type.scopeType()->accessSemantics()
-                != QQmlJSScope::AccessSemantics::Reference) {
-            m_logger->log(u"Cannot use a non-QObject type %1 to access prefixed import"_s.arg(
-                                  type.scopeType()->internalName()),
-                          qmlPrefixedImportType,
-                          type.scopeType()->sourceLocation());
-            return {};
-        }
-
+        Q_ASSERT(type.scopeType()->isReferenceType());
         return registerContentForName(name, type);
     }
     if (type.isConversion()) {
